# polymarket_bot

./: .env  .env.example  .gitignore  .isort.cfg  AI_DECISIONS.md  ARCHITECTURE.md  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  DEBUGGING_GUIDE.md  Dockerfile  GAMMA_API_REFACTORING.md  IMPLEMENTATION_SUMMARY.md  OPERATIONS.md  PERFORMANCE_DASHBOARD.md  README.md  ROADMAP.md  ai_decisions_generator.py  analytics_advanced.py  dashboard.py  database.py  db_models.py  deploy_raspberry_pi.sh  docker-compose.local.yml  docker-compose.yml  error_logger.py  fix_permissions.sh  git_integration.py  main.py  migrate.sh  migrate_to_postgres.py  mypy.ini  mypy_output.txt  mypy_verify_db.txt  mypy_verify_main.txt  mypy_verify_main_4.txt  polymarket.db  pyproject.toml  requirements-dev.txt  requirements.txt  (+5 more)
archive/: setup_logrotate.sh  verify_db_imports.py
config/: config.toml  multi_outcome.yaml
database/: polymarket.db  polymarket.db.bak  polymarket_20260202.db  upload_db_to_github.sh
docs/: ARCHITECTURE.md  api_endpoints.md  database_schema.md
legacy_v1/: .env.example  .gitignore  CHANGELOG.md  PERFORMANCE_DASHBOARD.md  ROADMAP.md  readme.md
scripts/: fix_database.py  fix_permissions.sh
src/: README.md  adaptive_rate_limiter.py  ai_decisions_generator.py  analytics_advanced.py  api_usage_report.py  backtest.py  clob_client.py  config_loader.py  dashboard.py  database.py  db_models.py  error_logger.py  gemini_tracker.py  git_integration.py  health_monitor.py  logging_config.py  main.py  market_queue.py  multi_outcome_handler.py  notifications.py  order_executor.py  (+1 more)
(+708 files in other folders)
